# gnark-bn254-verifier

./: Cargo.toml  Makefile
data/: proof.json  verification_key.json
src/: lib.rs  main.rs  types.rs
