[package]
name = "gnark-bn254-verifier"
authors = [ "Aditya Bisht" ]
description = "A rust gnark verifier for BN254 curve"
repository = "https://github.com/Bisht13/gnark-bn254-verifier"
keywords = [ "zero-knowledge", "cryptography", "zkSNARK", "SNARK", "gnark" ]
categories = [ "cryptography" ]
readme = "README.md"
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2021"
version = "1.0.2"

[dependencies]
anyhow = "1.0.92"
ark-bn254 = "0.4.0"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-groth16 = "0.4.0"
ark-serialize = "0.4.2"
ark-snark = "0.4.0"
big-int = "7.0.0"
clap = { version = "4.5.20", features = ["derive"] }
lazy_static = "1.5.0"
num-bigint = { version = "0.4.6", features = ["serde"] }
num-traits = "0.2.19"
rand = "0.8.5"
serde = { version = "1.0.214", features = [ "derive" ] }
serde_json = "1.0.132"
sha2 = "0.10.8"
